--- a/yasmin.2C/index.html/index.html
+++ b/yasmin.2C/index.html/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lange="en">
 <head>
@@ -8,7 +9,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="cabechalho">
+<header class="cabeçalho">
 <img class="alura_imagem" src="aluralogo.webp" alt="imagem alura">
 <h1 class="texto_alura">ALURA</h1>
 <p class="texto_escola">ESCOLA</p>
@@ -16,16 +17,11 @@
 </header>
 <div class="texto_inteiro">
 <h1 class="texto_sobre">sobre a escola</h1>
-<p class="texto_inteiro"
-
-
-
-
+<p class="texto_inteiro">Inicio-24/02/94, em salas de aula adaptadas num antigo salão de baile na comunidade de Areias. Foi autorizada a funcionar com duas 5a series e uma 6a serie num total de 71 alunos. A Parte Administrativa funcionava no mesmo predio da Escola Municipal de Areias.</p>
+<img class="frente_escola" src="frenteescola"  alt="frenteescola">
+</div>
 </body>
-
-
-
-
+</html>
 
 
 
